fix for Background.tsx | should not stuck on second page load anymore

--- a/src/components/page/background.module.css
+++ b/src/components/page/background.module.css
@@ -2,9 +2,9 @@
   width: 200vh;
   height: 150vw;
   position: fixed;
-  overflow: hidden;
   transform: translatex(calc(50vw - 50%)) translatey(calc(50vh - 50%))
-    rotate(120deg);
+    rotate(125deg);
+  z-index: -1;
 }
 
 .animated {
@@ -13,8 +13,8 @@
   width: 100px;
   opacity: 0;
   background-color: var(--color-secondary);
+  border-radius: 20%;
   position: fixed;
-  background: linear-gradient(-45deg, #fff, rgba(0, 0, 255, 0));
-  filter: drop-shadow(0 0 6px #fff);
-  overflow: hidden;
+  background: linear-gradient(-45deg, var(--color-primary), #0000ff00);
+  filter: drop-shadow(0 0 .6em var(--color-secondary));
 }
